Improved HTML and CSS
- Added title and description in HTML
- Added incomplete button in HTML
-Added background color, font size, text alignment, and margin to the CSS

--- a/files/pages/index.html
+++ b/files/pages/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Number Converter</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <h1>Welcome to the Number Converter!</h1>
+    <p>This is the number converter. All you have to do is imput a number and you get the same number, only converted into binary and hexadecimal.</p>
+    <p><input id="convertButton" type="button" value="Convert Numbers!" onclick=""/></p>
 </body>
 </html>
