Added JS file and finished the HTML
- Added JS file with a placeholder function
- Added comments of HTML and CSS file
- Finished the HTML button so when pressed it will run the JS placeholder function

--- a/files/pages/index.html
+++ b/files/pages/index.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <!--This is the script source for the number converter-->
+    <script src="./numberConverter.js"></script>
+
+    <!--This is where the Text and Button is-->
     <h1>Welcome to the Number Converter!</h1>
     <p>This is the number converter. All you have to do is imput a number and you get the same number, only converted into binary and hexadecimal.</p>
-    <p><input id="convertButton" type="button" value="Convert Numbers!" onclick=""/></p>
+    <p><input id="convertButton" type="button" value="Convert Numbers!" onclick="numberConvert()"/></p>
 </body>
 </html>
