JS and small fix on the description
Rephrased the description of website and also worked on the JS for the conversation.

--- a/files/pages/index.html
+++ b/files/pages/index.html
@@ -13,7 +13,7 @@
 
     <!--This is where the Text and Button is-->
     <h1>Welcome to the Number Converter!</h1>
-    <p>This is the number converter. All you have to do is imput a number and you get the same number, only converted into binary and hexadecimal.</p>
+    <p>This is the number converter. What you do is put in your binary and it will convert it to its hexadecimal form.</p>
     <p><input id="convertButton" type="button" value="Convert Numbers!" onclick="numberConvert()"/></p>
 </body>
 </html>
