JS Working and fix the wording in "title"
Converting is working in two prompts

--- a/files/pages/index.html
+++ b/files/pages/index.html
@@ -13,7 +13,7 @@
 
     <!--This is where the Text and Button is-->
     <h1>Welcome to the Number Converter!</h1>
-    <p>This is the number converter. What you do is put in your binary and it will convert it to its hexadecimal form.</p>
+    <p>This is the number converter. What you do is put in your decimal (regular) and it will convert it to its binary and hexadecimal form.</p>
     <p><input id="convertButton" type="button" value="Convert Numbers!" onclick="numberConvert()"/></p>
 </body>
 </html>
