--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Number Converter</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="files/pages/style.css">
 </head>
 <body>
     <!--This is the script source for the number converter-->
-    <script src="./numberConverter.js"></script>
+    <script src="files/pages/numberConverter.js"></script>
 
     <!--This is where the Text and Button is-->
     <h1>Welcome to the Number Converter!</h1>
@@ -17,7 +17,7 @@
         <br>
         This is the number converter. What you do is put in your decimal and it will convert it to its binary and hexadecimal form.
         <br><br>
-        <input id="convertButton" type="button" value="Convert Numbers!" onclick="example()"/>
+        <input id="convertButton" type="button" value="Convert Numbers!" onclick="numberConvert()"/>
         <br><br>
     </p>
 </body>
